correct panel alignment

--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -20,3 +20,8 @@ main {
 .panel-primary {
   height: 125px;
 }
+
+.panel-heading.row {
+  width: 100%;
+  margin-left: 0%;
+}
